manifests/ingress-1234.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "bugbash1622-2182"
    labels:
        app: "bugbash1622-2182"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: "bugbash1622fc07-bugbash1622-2182.bc942556c07f4798b27b.westus2.aksapp.io"
          http:
            paths:
            - path: /
              backend:
                serviceName: "bugbash1622-2182"
                servicePort: 80
